others/influxdb/influxdb2-dashboard-ingress.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
# apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb2-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: influx-system
spec:
  rules:
    - host: influx.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: my-influxdb-influxdb2
              servicePort: 80
